# money_things

./: .gitignore  API_AUDIT.md  CLAUDE.md  FLOW_REVIEW.md  QUALITY_LOG.md  README.md  pyproject.toml  run_tests.sh
moves/: .env.example  .gitignore  CLAUDE.md  PLAN.md  REVIEW.md  REVIEW_P1.md  pyproject.toml  requirements.txt  run.py  run_tests.sh
moves/api/: app.py  auth.py  benchmark.py  deps.py  websocket.py
moves/bot/: telegram.py
moves/broker/: base.py  mock.py  schwab.py
moves/config/: .env.example  settings.py
moves/dashboard/: index.html  login.html  moves.css  moves.js
moves/db/: database.py  schema.sql  seed.py
moves/engine/: __init__.py  analytics.py  approval.py  backup.py  congress.py  congress_scoring.py  core.py  discovery.py  earnings_calendar.py  jobs.py  news_scanner.py  news_validator.py  outcome_tracker.py  pricing.py  principles.py  reconciliation.py  risk.py  scheduler.py  signal_generator.py  signals.py  tax_engine.py  thesis.py  trading_windows.py  whatif.py
moves/scripts/: import_journal.py  reset_mock.py  seed_history.py  seed_mock.py
moves/spec/: clawdbot.md  money_moves.md  multi_user.md
moves/tests/: conftest.py  test_analytics.py  test_api.py  test_approval.py  test_auth.py  test_backup.py  test_benchmark.py  test_broker_mock.py  test_congress.py  test_congress_scoring.py  test_core.py  test_database.py  (+25 more)
thoughts/: AGENT_PROMPT.md  CLAUDE.md  __init__.py  bridge.py  commands.py  context_builder.py  engine.py  feedback.py  onboard.py  portfolio.md  pyproject.toml  requirements.txt  spawner.py  trigger_monitor.py
(+45 files in other folders)
