[project]
name = "money-moves"
version = "0.1.0"
description = "Autonomous investment execution engine"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
timeout = 30

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
