[project]
name = "money-thoughts"
version = "0.1.0"
description = "Conversational thesis development, research, review, and learning engine"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2",
    "finnhub-python>=2.4",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
